syntax = "proto3";

package coredef;

// ==========================================================
// 系统消息
// ==========================================================

// 一个连接接入
message SessionAccepted
{
	
}

// 已连接
message SessionConnected
{
	
}

// 接受错误
message SessionAcceptFailed
{
	string Reason = 1;
}

// 连接错误
message SessionConnectFailed
{
	string Reason = 1;
}

// 连接断开
message SessionClosed
{
	string Reason = 1;
}


// ==========================================================
// RPC
// ==========================================================

message RemoteCallACK
{
	uint32 MsgID = 1;		// 消息号
	
	bytes Data = 2;		// 用户封包
	
	int32 CallID = 3;
}